@@ -144,4 +144,3 @@ pod_coverage:
     - FFI::Build::File::Object#build_item
     - FFI::Build::MM
     - FFI::Platypus::Function#new
-    - FFI::Platypus::Function#attach
