@@ -107,7 +107,7 @@ call(self, ...)
     }
 
 void
-attach(self, perl_name, path_name, proto)
+_attach(self, perl_name, path_name, proto)
     SV *self
     const char *perl_name
     ffi_pl_string path_name
